--- a/index.html
+++ b/index.html
@@ -17,11 +17,19 @@
     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
       <div class="progress-bar" rol="progressbar" style="width: calc(100/12*1%)"></div>
     </div>
-    <h2 id='title' class="text-center mt-5">문제</h2>
+    <h2 id="title" class="text-center mt-5">문제</h2>
     <input id="type" type="hidden" value="EI"/>
     <button id="A" type="button" class="btn btn-primary mt-5">Primary</button>
     <button id="B" type="button" class="btn btn-primary mt-5">Primary</button>
   </article>
+  <article class="result">
+    <img id="img" class = "rounded-circle mt-5" src="lion.jpg" alt="" />
+    <h2 id="animal mt-5">동물이름</h2>
+    <h3 id="explain mt-5">설명</h3>
+  </article>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <div class="addthis_inline_share_toolbox share"></div>
+
   <input type="hidden" id="'EI" value="0"/>
   <input type="hidden" id="'SN" value="0"/>
   <input type="hidden" id="'TF" value="0"/>
@@ -34,15 +42,20 @@
       1: {'title': '문제 1번', 'type': 'EI', 'A': 'E', 'B': 'I'},
       2: {'title': '문제 2번', 'type': 'EI', 'A': 'E', 'B': 'I'},
       3: {'title': '문제 3번', 'type': 'EI', 'A': 'E', 'B': 'I'},
-      4: {'title': '문제 4번', 'type': 'EI', 'A': 'E', 'B': 'I'},
-      5: {'title': '문제 5번', 'type': 'EI', 'A': 'E', 'B': 'I'},
-      6: {'title': '문제 6번', 'type': 'EI', 'A': 'E', 'B': 'I'},
-      7: {'title': '문제 7번', 'type': 'EI', 'A': 'E', 'B': 'I'},
-      8: {'title': '문제 8번', 'type': 'EI', 'A': 'E', 'B': 'I'},
-      9: {'title': '문제 9번', 'type': 'EI', 'A': 'E', 'B': 'I'},
-      10: {'title': '문제 10번', 'type': 'EI', 'A': 'E', 'B': 'I'},
-      11: {'title': '문제 11번', 'type': 'EI', 'A': 'E', 'B': 'I'},
-      12: {'title': '문제 12번', 'type': 'EI', 'A': 'E', 'B': 'I'}
+      5: {'title': '문제 5번', 'type': 'SN', 'A': 'S', 'B': 'N'},
+      6: {'title': '문제 6번', 'type': 'SN', 'A': 'S', 'B': 'N'},
+      4: {'title': '문제 4번', 'type': 'SN', 'A': 'S', 'B': 'N'},
+      7: {'title': '문제 7번', 'type': 'TF', 'A': 'T', 'B': 'F'},
+      8: {'title': '문제 8번', 'type': 'TF', 'A': 'T', 'B': 'F'},
+      9: {'title': '문제 9번', 'type': 'TF', 'A': 'T', 'B': 'F'},
+      10: {'title': '문제 10번', 'type': 'JP', 'A': 'J', 'B': 'P'},
+      11: {'title': '문제 11번', 'type': 'JP', 'A': 'J', 'B': 'P'},
+      12: {'title': '문제 12번', 'type': 'JP', 'A': 'J', 'B': 'P'}
+   }
+   var result = {
+    "ISTJ": {"animal": "하마", "explain": "하마 설명", "img": "lion.jpg"}, 
+    "ENFP": {"animal": "하마", "explain": "하마 설명", "img": "lion.jpg"}, 
+    "ENTJ": {"animal": "하마", "explain": "하마 설명", "img": "lion.jpg"} 
    }
     function start(){
       $('.start').hide();
@@ -59,13 +72,31 @@
       next();
     });
     function next(){
-      $('.progress-bar').attr('style', 'width: clac(100/12*'+num+'%)');
-      $('#title').html(q[num]["title"]);
-      $('#type').val(q[num]['type']);
-      $('#A').html(q[num]["A"]);
-      $('#B').html(q[num]['B']);
-      num++;
+      if(num ==13){
+        $('.question').hide();
+        $('.result').show();
+        var mbti = "";
+        ($("#EI").val() < 2)? mbti += "I" : mbti += "E";
+        ($("#SN").val() < 2)? mbti += "N" : mbti += "S";
+        ($("#TF").val() < 2)? mbti += "F" : mbti += "T";
+        ($("#JP").val() < 2)? mbti += "P" : mbti += "J";
+        alert(mbti);
+        $('#img').attr('src', result[mbti]['img']);
+        $('#animal').html(result[mbti]['animal']);
+        $('#explain').html(result[mbti]['explain']);
+      }
+      else{
+        $('.progress-bar').attr('style', 'width: clac(100/12*'+num+'%)');
+        $('#title').html(q[num]["title"]);
+        $('#type').val(q[num]['type']);
+        $('#A').html(q[num]["A"]);
+        $('#B').html(q[num]['B']);
+        num++;
+      }
     }
   </script>
+  <!-- Go to www.addthis.com/dashboard to customize your tools -->
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-63b269a98844565f"></script>
+
 </body>
 </html>
